--- a/GestureRecognition/AndroidManifest.xml
+++ b/GestureRecognition/AndroidManifest.xml
@@ -8,7 +8,12 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 <uses-feature android:name="android.hardware.camera" />
+<uses-feature android:name="android.hardware.camera.autofocus" />
+<uses-feature android:name="android.hardware.camera.front" />
+<uses-feature android:name="android.hardware.camera.front.autofocus" />
+<uses-permission android:name="android.permission.CAMERA" />
     <application
+        android:name="Globals"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +21,9 @@
         <activity android:name="com.example.fsfsfsd.AddNewGestureActivity"></activity>
         <activity android:name="com.example.fsfsfsd.ChooseProblemSetsActivity"></activity>
         <activity android:name="com.example.fsfsfsd.demo"></activity>
+        <activity android:name="com.example.fsfsfsd.demo2"></activity>
+        <activity android:name="com.example.fsfsfsd.DisplayVideo"></activity>
+        <activity android:name="com.example.fsfsfsd.SingleImageViewer"></activity>
         <activity
             android:name="com.example.fsfsfsd.MainActivity"
             android:label="@string/app_name" >
