--- a/GestureRecognition/AndroidManifest.xml
+++ b/GestureRecognition/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fsfsfsd"
+    package="com.GestureRecognition"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-<uses-feature android:name="android.hardware.camera" />
+	
 <uses-feature android:name="android.hardware.camera.autofocus" />
 <uses-feature android:name="android.hardware.camera.front" />
 <uses-feature android:name="android.hardware.camera.front.autofocus" />
@@ -18,14 +18,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.example.fsfsfsd.AddNewGestureActivity"></activity>
-        <activity android:name="com.example.fsfsfsd.ChooseProblemSetsActivity"></activity>
-        <activity android:name="com.example.fsfsfsd.demo"></activity>
-        <activity android:name="com.example.fsfsfsd.demo2"></activity>
-        <activity android:name="com.example.fsfsfsd.DisplayVideo"></activity>
-        <activity android:name="com.example.fsfsfsd.SingleImageViewer"></activity>
+        <activity android:name="com.GestureRecognition.UI.AddNewGestureActivity"></activity>
+        <activity android:name="com.GestureRecognition.UI.ChooseProblemSetsActivity"></activity>
+        <activity android:name="com.GestureRecognition.UI.demo"></activity>
+        <activity android:name="com.GestureRecognition.UI.demo2"></activity>
+        <activity android:name="com.GestureRecognition.UI.DisplayVideo"></activity>
+        <activity android:name="com.GestureRecognition.UI.SingleImageViewer"></activity>
         <activity
-            android:name="com.example.fsfsfsd.MainActivity"
+            android:name="com.GestureRecognition.UI.MainActivity"
             android:label="@string/app_name" >
             
             <intent-filter>
